<resources>
    <string name="app_name">iFixIt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="corpo_hello">Ola Corpo</string>
    <string name="cabecalho_hello">OLa Cabecalho</string>
    <string name="btnNotas">Notas</string>
    <string name="btnContatos">Contatos</string>
    <string name="novo_contato">Novo Contato +</string>
    <string name="title_activity_contato">Contato</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="telefone">Telefone</string>
    <string name="endere_o">Endereço</string>
    <string name="nome">Nome</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifica_es">Notificações</string>
    <string name="instrumentos">Instrumentos</string>
    <string name="inicial">Inicial</string>
    <string name="agenda">Agenda</string>
    <string name="contatos">Contatos</string>
    <string name="atendimentos">Atendimentos</string>
</resources>
