<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/inicial" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifica_es" />

    <item
        android:id="@+id/navigation_atendimentos"
        android:icon="@drawable/ic_local_hospital_black_24dp"
        android:title="@string/atendimentos" />

    <item
        android:id="@+id/navigation_contatos"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/contatos" />

    <item
        android:id="@+id/navigation_agenda"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/agenda" />

</menu>
